--- a/js-basic/index.html
+++ b/js-basic/index.html
@@ -8,12 +8,30 @@
 </head>
 <body>
     <!-- <script src="index.js"></script> -->
-    <script src="Operator/arithmetic.js"></script> -->
+    <!-- <script src="Operator/arithmetic.js"></script>
     <script src="Operator/assignment.js"></script>
     <script src="Operator/comparasion.js"></script>
     <script src="Operator/ternary.js"></script>
     <script src="Operator/logical.js"></script>
     <script src="Operator/bitwise.js"></script>
-    <script src="Operator/exercise.js"></script>
+    <script src="Operator/exercise.js"></script> -->
+    <!-- <script src="Control Flow/if..else.js"></script> -->
+    <!-- <script src="Control Flow/switch..case.js"></script> -->
+    <!-- <script src="Control Flow/for.js"></script> -->
+    <!-- <script src="Control Flow/while.js"></script> -->
+    <!-- <script src="Control Flow/infinite.loop.js"></script> -->
+    <!-- <script src="Control Flow/for..in.loop.js"></script> -->
+    <!-- <script src="Control Flow/break and continue.js"></script> -->
+    <!-- <script src="Control Flow/exercise1.js"></script> -->
+    <!-- <script src="Control Flow/exercise2.js"></script> -->
+    <!-- <script src="Control Flow/exercise3.js"></script> -->
+    <!-- <script src="Control Flow/exercise4.js"></script> -->
+    <!-- <script src="Control Flow/exercise5.js"></script> -->
+    <!-- <script src="Control Flow/exercise6.js"></script> -->
+    <!-- <script src="Control Flow/exercise7.js"></script> -->
+    <!-- <script src="Control Flow/exercise8.js"></script> -->
+    <!-- <script src="Control Flow/exercise9.js"></script> -->
+    <!-- <script src="Control Flow/exercise10.js"></script> -->
+    <script src="Control Flow/exercise11.js"></script>
 </body>
 </html>
