until Value vs Reference Types part of Onjects (javaScript)

--- a/js-basic/index.html
+++ b/js-basic/index.html
@@ -32,6 +32,12 @@
     <!-- <script src="Control Flow/exercise8.js"></script> -->
     <!-- <script src="Control Flow/exercise9.js"></script> -->
     <!-- <script src="Control Flow/exercise10.js"></script> -->
-    <script src="Control Flow/exercise11.js"></script>
+    <!-- <script src="Control Flow/exercise11.js"></script> -->
+    <!-- <script src="Objects/basic.js"></script> -->
+    <!-- <script src="Objects/factory function.js"></script> -->
+    <!-- <script src="Objects/constructor function.js"></script> -->
+    <!-- <script src="Objects/Dynamic nature of object.js"></script> -->
+    <!-- <script src="Objects/function are object.js"></script> -->
+    <script src="Objects/value vs reference type.js"></script>
 </body>
 </html>
