I have completed until Exercise-3 part of Objects (javaScript)

--- a/js-basic/index.html
+++ b/js-basic/index.html
@@ -38,6 +38,13 @@
     <!-- <script src="Objects/constructor function.js"></script> -->
     <!-- <script src="Objects/Dynamic nature of object.js"></script> -->
     <!-- <script src="Objects/function are object.js"></script> -->
-    <script src="Objects/value vs reference type.js"></script>
+    <!-- <script src="Objects/value vs reference type.js"></script> -->
+    <!-- <script src="Objects/Enumerating Properties of an Object.js"></script> -->
+    <!-- <script src="Objects/Cloning an Object.js"></script> -->
+    <!-- <script src="Objects/Template Literals.js"></script> -->
+    <!-- <script src="Objects/date.js"></script> -->
+    <!-- <script src="Objects/exercise1.js"></script> -->
+    <!-- <script src="Objects/exercise2.js"></script> -->
+    <script src="Objects/exercise3.js"></script>
 </body>
 </html>
