I have completed until emptying an array part of Arrays (javaScript)

--- a/js-basic/index.html
+++ b/js-basic/index.html
@@ -45,6 +45,14 @@
     <!-- <script src="Objects/date.js"></script> -->
     <!-- <script src="Objects/exercise1.js"></script> -->
     <!-- <script src="Objects/exercise2.js"></script> -->
-    <script src="Objects/exercise3.js"></script>
+    <!-- <script src="Objects/exercise3.js"></script> -->
+    <!-- <script src="Objects/exercise4.js"></script> -->
+    <!-- <script src="Objects/exercise5.js"></script> -->
+    <!-- <script src="Arrays/Adding Elements.js"></script> -->
+    <!-- <script src="Arrays/Finding Elements Primitives.js"></script> -->
+    <!-- <script src="Arrays/Finding Elements (Reference Types).js"></script> -->
+    <!-- <script src="Arrays/Arrow Functions.js"></script> -->
+    <!-- <script src="Arrays/Removing Elements.js"></script> -->
+    <script src="Arrays/Emptying an Array.js"></script>
 </body>
 </html>
