I have completed until Mapping an Array part of Arrays (JavaScript)

--- a/js-basic/index.html
+++ b/js-basic/index.html
@@ -53,6 +53,15 @@
     <!-- <script src="Arrays/Finding Elements (Reference Types).js"></script> -->
     <!-- <script src="Arrays/Arrow Functions.js"></script> -->
     <!-- <script src="Arrays/Removing Elements.js"></script> -->
-    <script src="Arrays/Emptying an Array.js"></script>
+    <!-- <script src="Arrays/Emptying an Array.js"></script> -->
+    <!-- <script src="Arrays/Combining and Slicing Arrays.js"></script> -->
+    <!-- <script src="Arrays/The Spread Operator.js"></script> -->
+    <!-- <script src="Arrays/Iterating an Array.js"></script> -->
+    <!-- <script src="Arrays/Joining Arrays.js"></script> -->
+    <!-- <script src="Arrays/Sorting Arrays.js"></script> -->
+    <!-- <script src="Arrays/Testing the Elements of an Array.js"></script> -->
+    <!-- <script src="Arrays/Filtering an Array.js"></script> -->
+    <script src="Arrays/Mapping an Array.js"></script>
+
 </body>
 </html>
