I have completed until part of Arrays (JavaScript)

--- a/js-basic/index.html
+++ b/js-basic/index.html
@@ -61,7 +61,15 @@
     <!-- <script src="Arrays/Sorting Arrays.js"></script> -->
     <!-- <script src="Arrays/Testing the Elements of an Array.js"></script> -->
     <!-- <script src="Arrays/Filtering an Array.js"></script> -->
-    <script src="Arrays/Mapping an Array.js"></script>
+    <!-- <script src="Arrays/Mapping an Array.js"></script> -->
+    <!-- <script src="Arrays/Reducing an Array.js"></script> -->
+    <!-- <script src="Arrays/Exercise 1.js"></script> -->
+    <!-- <script src="Arrays/Exercise 2.js"></script> -->
+    <!-- <script src="Arrays/Exercise 3.js"></script> -->
+    <!-- <script src="Arrays/Exercise 4.js"></script> -->
+    <!-- <script src="Arrays/Exercise 5.js"></script> -->
+    <!-- <script src="Arrays/Exercise 6.js"></script> -->
+    <script src="Arrays/Exercise 7.js"></script>
 
 </body>
 </html>
