I have completed until rest operator part of Function (JavaScript)

--- a/js-basic/index.html
+++ b/js-basic/index.html
@@ -69,7 +69,12 @@
     <!-- <script src="Arrays/Exercise 4.js"></script> -->
     <!-- <script src="Arrays/Exercise 5.js"></script> -->
     <!-- <script src="Arrays/Exercise 6.js"></script> -->
-    <script src="Arrays/Exercise 7.js"></script>
+    <!-- <script src="Arrays/Exercise 7.js"></script> -->
+            <!-- Get starting function -->
+    <!-- <script src="Functions/Function Declarations vs Expressions.js"></script> -->
+    <!-- <script src="Functions/hoisting.js"></script> -->
+    <!-- <script src="Functions/Arguments.js"></script> -->
+    <!-- <script src="Functions/The Rest Operator.js"></script> -->
 
 </body>
 </html>
