I have complated full course of JavaScript

--- a/js-basic/index.html
+++ b/js-basic/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <h1>Hellw World </h1>
 </head>
 <body>
     <!-- <script src="index.js"></script> -->
@@ -75,6 +76,15 @@
     <!-- <script src="Functions/hoisting.js"></script> -->
     <!-- <script src="Functions/Arguments.js"></script> -->
     <!-- <script src="Functions/The Rest Operator.js"></script> -->
-
+    <!-- <script src="Functions/Default Parameters.js"></script> -->
+    <!-- <script src="Functions/Getters and Setters.js"></script> -->
+    <!-- <script src="Functions/Try and Catch.js"></script> -->
+    <!-- <script src="Functions/Local vs Global Scope.js"></script> -->
+    <!-- <script src="Functions/Let vs Var.js"></script> -->
+    <!-- <script src="Functions/The this Keyword.js"></script> -->
+    <!-- <script src="Functions/Changing this.js"></script> -->
+    <!-- <script src="Functions/Exercise 1- Sum of Arguments.js"></script> -->
+    <!-- <script src="Functions/Exercise 2- Area of Circle.js"></script> -->
+    <script src="Functions/Exercise 3- Error Handling.js"></script>
 </body>
 </html>
