I have completed custom configs (ReactJs)

--- a/js-basic/index.html
+++ b/js-basic/index.html
@@ -85,6 +85,6 @@
     <!-- <script src="Functions/Changing this.js"></script> -->
     <!-- <script src="Functions/Exercise 1- Sum of Arguments.js"></script> -->
     <!-- <script src="Functions/Exercise 2- Area of Circle.js"></script> -->
-    <script src="Functions/Exercise 3- Error Handling.js"></script>
+    <!-- <script src="Functions/Exercise 3- Error Handling.js"></script> -->
 </body>
 </html>
